Mensaje para las Visitas

--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
       </title>   
    </head>
    <body>
-      Prueba   
+      <p style="Background-color:red">Jordi y El señor TitoCogo son colaboradores</p>
    </body>
 </html>
