He añadido los estilos con css

--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
    <head>
       <title>
        car-styles 
-      </title>   
+      </title>
+      <link rel="stylesheets" href="StyleSheets/main.css"/>
    </head>
    <body>
-      <p style="Background-color:red">Jordi y El señor TitoCogo son colaboradores</p>
+      <h1>Car Styles</h1>
    </body>
 </html>
