Fondo y titulo a la pagina web

--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
       <title>
        car-styles 
       </title>
-      <link rel="stylesheets" href="StyleSheets/main.css"/>
+      <link rel="stylesheet" href="StyleSheets/main.css"/>
    </head>
    <body>
       <h1>Car Styles</h1>
+      <p>Automoviles</p>
    </body>
 </html>
