He añadido nuevas imagenes

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <div id="slideshow-inner">
             <ul>
                 <li id="slide1">
-                    <img src="http://cssdeck.com/uploads/media/items/3/3yiC6Yq.jpg" />
+                    <img src="imagenes/aston martin.jpg" />
                     <div class="description">
                         <input type="checkbox" id="show-description-1"/>
                         <label for="show-description-1" class="show-description-label">I</label>
@@ -38,7 +38,7 @@
                     </div>
                 </li>
                 <li id="slide2">
-                    <img src="http://cssdeck.com/uploads/media/items/4/40Ly3VB.jpg" />
+                    <img src="imagenes/audi.jpg" />
                     <div class="description">
                         <input type="checkbox" id="show-description-2"/>
                         <label for="show-description-2" class="show-description-label">I</label>
@@ -49,7 +49,7 @@
                     </div>
                 </li>
                 <li id="slide3">
-                    <img src="http://cssdeck.com/uploads/media/items/0/00kih8g.jpg" />
+                    <img src="imagenes/chevrolet.jpg" />
                     <div class="description">
                         <input type="checkbox" id="show-description-3"/>
                         <label for="show-description-3" class="show-description-label">I</label>
@@ -60,7 +60,7 @@
                     </div>
                 </li>
                 <li id="slide4">
-                    <img src="http://cssdeck.com/uploads/media/items/2/2rT2vdx.jpg" />
+                    <img src="imagenes/ferrari.jpg" />
                     <div class="description">
                         <input type="checkbox" id="show-description-4"/>
                         <label for="show-description-4" class="show-description-label">I</label>
@@ -71,7 +71,7 @@
                     </div>
                 </li>
                 <li id="slide5">
-                    <img src="http://cssdeck.com/uploads/media/items/8/8k3N3EL.jpg" />
+                    <img src="imagenes/lamborgini.jpg" />
                     <div class="description">
                         <input type="checkbox" id="show-description-5"/>
                         <label for="show-description-5" class="show-description-label">I</label>
