he añadido un link en forma de triangulo

--- a/index.html
+++ b/index.html
@@ -84,6 +84,11 @@
             </ul>
         </div>
     </div>
+    
+    <div class="contenedor">
+        <a id="corner" href="http://www.astonmartin.com/" > Aston Martin Website </a>
+<div>
 
    </body>
+
 </html>
