he añadido cosas

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
       <title>
        car-styles 
       </title>
-      <link rel="stylesheet" href="StyleSheets/main.css"/>
+      <link rel="stylesheet" href="StyleSheet/main.css"/>
    </head>
    <body>
       <h1>Car Styles</h1>
