--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
       <link rel="stylesheet" href="Stylesheet/main.css"/>
    </head>
    <body>
-      <h1>Car Styles</h1>
-      <p>Automoviles</p>
+      <h1>Car Styles <img src="imagenes/icono.JPEG"</h1>
           <div id="slideshow-wrap">
         <input type="radio" id="button-1" name="controls" checked="checked"/>
         <label for="button-1"></label>
@@ -86,7 +85,7 @@
     </div>
     
     <div class="contenedor">
-        <a id="corner" href="http://www.astonmartin.com/" > Aston Martin Website </a>
+        <a id="corner" href="http://www.astonmartin.com/" >  </a>
 <div>
 
    </body>
