idroj96 y sergiovcf hemos centrado las imágenes y cambiado la fuente del título

--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <html>
    <head>
       <title>
-       car-styles 
+       CAR STYLES 
       </title>
       <link rel="stylesheet" href="Stylesheet/main.css"/>
    </head>
    <body>
-      <h1>Car Styles <img src="imagenes/icono.JPEG"</h1>
+      <h1>CAR STYLES <img src="imagenes/icono.JPEG"</h1>
           <div id="slideshow-wrap">
         <input type="radio" id="button-1" name="controls" checked="checked"/>
         <label for="button-1"></label>
@@ -70,7 +70,7 @@
                     </div>
                 </li>
                 <li id="slide5">
-                    <img src="imagenes/lamborgini.jpg" />
+                    <img src="imagenes/lamborghini.jpg" />
                     <div class="description">
                         <input type="checkbox" id="show-description-5"/>
                         <label for="show-description-5" class="show-description-label">I</label>
