He arreglado los mensajes subliminales

--- a/index.html
+++ b/index.html
@@ -31,8 +31,7 @@
                         <input type="checkbox" id="show-description-1"/>
                         <label for="show-description-1" class="show-description-label">I</label>
                         <div class="description-text">
-                            <h2>Flower power</h2>
-                            <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut</p>
+                            <h2>Aston Martin</h2>
                         </div>
                     </div>
                 </li>
@@ -42,8 +41,7 @@
                         <input type="checkbox" id="show-description-2"/>
                         <label for="show-description-2" class="show-description-label">I</label>
                         <div class="description-text">
-                            <h2>Golden sunset</h2>
-                            <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut</p>
+                            <h2>Audi</h2>
                         </div>
                     </div>
                 </li>
@@ -53,8 +51,7 @@
                         <input type="checkbox" id="show-description-3"/>
                         <label for="show-description-3" class="show-description-label">I</label>
                         <div class="description-text">
-                            <h2>Flower power again</h2>
-                            <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut</p>
+                            <h2>Chevrolet</h2>
                         </div>
                     </div>
                 </li>
@@ -64,8 +61,7 @@
                         <input type="checkbox" id="show-description-4"/>
                         <label for="show-description-4" class="show-description-label">I</label>
                         <div class="description-text">
-                            <h2>Stormy coast</h2>
-                            <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut</p>
+                            <h2>Ferrari</h2>
                         </div>
                     </div>
                 </li>
@@ -75,8 +71,7 @@
                         <input type="checkbox" id="show-description-5"/>
                         <label for="show-description-5" class="show-description-label">I</label>
                         <div class="description-text">
-                            <h2>Splash!</h2>
-                            <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut</p>
+                            <h2>Lamborghini</h2>
                         </div>
                     </div>
                 </li>
