Jordi ha añadido las imagenes y yo he modificado astonmartin.html

--- a/astonmartin.html
+++ b/astonmartin.html
@@ -3,9 +3,11 @@
       <title>
        car-styles/Aston Martin 
       </title>
-      <link rel="stylesheet" href="StyleSheet/astonmartin.css"/>
+      <link rel="stylesheet" href="Stylesheet/astonmartin.css"/>
    </head>
    <body>
+   
+   <h1>ASTON MARTIN<img src="imagenesaston/astonlogo.jpg"/></h1>
 
 <ul class="mi-menu">
   <li><a href="URL_enlace_1"> Historia</a></li>
