--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <div id="slideshow-inner">
             <ul>
                 <li id="slide1">
-                    <img src="imagenes/aston martin.jpg" />
+                    <img src="imagenes/aston_martin.jpg" />
                     <div class="description">
                         <input type="checkbox" id="show-description-1"/>
                         <label for="show-description-1" class="show-description-label">I</label>
