He puesto la historia y ejemplos de Lamborghini en dicha página

--- a/lamborghini.html
+++ b/lamborghini.html
@@ -10,6 +10,12 @@
    <h1>Lamborghini 
    <img src="Lamborghini-Gallardo.jpg" 
    </h1>
-   Lamborghini es una marca de coches de alta gama italianos caracterizados por su potencia y belleza.
+    Automobili Lamborghini Holding S.p.A. comunmente conocido como Lamborghini es un fabricante italiano de automoviles deportivos fundado en 1963 por el fabricante de tractores Ferruccio Lamborghini (1916-1993). La empresa original se llamaba Automobili Ferruccio Lamborghini SpA, que derivaba a su vez de la Lamborghini Trattori S.A.. Desde los primeros coupes deportivos hasta los actuales, los Lamborghini siempre se han destacado por sus prestaciones y sus modelos exoticos. 
+   <h2> Vamos a analizar diferentes modelos de Lamborghini con sus cualidades: Aventator, Gallardo, Murcielago, Cheetah y GT400. </h2> 
+   <h2> Lamborghini Aventator-> 
+   
+       
+   </h2>
+   
    </body>
    </html>
