he añadido un submenu con target tambien he añadido imagenes y efectos visuales

--- a/astonmartin.html
+++ b/astonmartin.html
@@ -1,22 +1,40 @@
-<<<<<<< HEAD
-=======
+
 <html>
    <head>
       <title>
        car-styles/Aston Martin 
       </title>
+      <meta charset="utf-8"> 
       <link rel="stylesheet" href="Stylesheet/astonmartin.css"/>
    </head>
    <body>
    
    <h1>ASTON MARTIN<img src="astonimagenes/astonlogo.jpg"/></h1>
 
-<ul class="mi-menu">
-  <li><a href="URL_enlace_1"> Historia</a></li>
-  <li><a href="URL_enlace_2"> Características </a></li>
-  <li><a href="URL_enlace_3"> Coches </a></li>
-</ul>
-<<<<<<< HEAD
-=======
->>>>>>> f6a175ce2fe40a188fe1dade6d3a00bb656a8b55
->>>>>>> 0ede7ef021bdc237d2d4ba1403bee012adae58c0
+<a class="click" href="#slideDiv">Historia</a>
+
+<div id="slideDiv">
+Aston Martin fue fundada en 1914 por el piloto Lionel Martin<img src="astonimagenes/astonviejo.jpg"/>, vencedor en 1913 de la famosa carrera de montaña Aston-Clinton. Tuvo una destacada participación en numerosas competiciones de gran turismo. Históricamente, <img src="astonimagenes/astonviejo1.jpg"/>sus rivales más importantes son las firmas italianas Ferrari y Maserati y, recientemente, la marca alemana Porsche. Aportando un diferenciado estilo inglés, Aston Martin adquirió fama mundial al proveer los automóviles para las películas de James Bond, el agente 007. En Casino Royale (2006) y en Quantum of Solace (2008) el actor Daniel Craig utiliza un DBS plateado.
+En 2005 la marca volvió a las competiciones deportivas con éxito logrando un tercer puesto en la categoría GT de las 24 Horas de Le Mans<img src="astonimagenes/astonviejo2.jpg"/> con su modelo DBR9. Aston Martin ganó por última vez esa legendaria prueba en 1959.
+
+
+1950 Aston Martin DB2 Vantage.
+Durante casi toda su historia, Aston Martin ha fabricado automóviles de manera artesanal y en pequeñas series; entre 1957 y 2000 la producción total de la marca no llegó a doce mil unidades. Estos volúmenes se han incrementado en años recientes. En 2003, Aston Martin produjo 1.476 automóviles y en 2004 dio un notable salto a 2.400 unidades vendidas acercándose a la meta establecida por el Premier Automotive Group -cuando era su dueño-, de cinco mil automóviles anuales para 2006. La fábrica, inaugurada en 2004 en Gaydon, Inglaterra, tiene esa capacidad de producción. Las ventas del último año fiscal permitieron a la marca británica anunciar su primer ejercicio con ganancias desde 1962 terminando con el increíble récord de más de 40 años con balances en rojo. En el 2007 Aston Martin fabricó 7,250 automóviles, un incremento de 6.7% respecto al 2006.
+Aston Martin produce tres gamas de modelos:<img src="astonimagenes/astonviejo3.jpg"/> DB9, con motor V12 de 6 litros; Vantage, con motor V8 de 4,7 litros y 420 CV; y desde 2007 el DBS V12, un modelo de edición limitada con diseño basado en el del DB9. Al igual que el Vanquish (producido desde 2001 a 2007) y el DB9, el Vantage tiene motor delantero y tracción posterior, el Vantage se presentó como un nuevo nivel de entrada a la marca inglesa. Está previsto que en 2009 Aston Martin empiece a fabricar el Aston Martin Rapide, un Gran turismo de 4 plazas.<img src="astonimagenes/astonviejo4.jpg"/>
+Actualmente, Aston Martin ha sacado a la venta un nuevo modelo que alcanza los 325 km/h (200 mph), este modelo ha sido llamado One-77, con un precio de un millón de euros aproximadamente.
+Aston Martin revivirá la marca Lagonda, y tiene previsto vender el primer modelo de dicha marca en 2012.1
+El futuro del Aston Martin peligra por problemas de financiación de la deuda.    
+    <a href="#">Close</a>
+</div>
+<a class="click" href="#slideDiv">Click this button</a>
+
+<div id="slideDiv">
+    I'm a sliding div!
+    <a href="#">Close</a>
+</div>
+<a class="click" href="#slideDiv">Click this button</a>
+
+<div id="slideDiv">
+    I'm a sliding div!
+    <a href="#">Close</a>
+</div>
