he intentado añadir un hover

--- a/astonmartin.html
+++ b/astonmartin.html
@@ -10,12 +10,10 @@
    <body>
    
    <h1>ASTON MARTIN<img src="astonimagenes/astonlogo.jpg"/></h1>
-
-<a class="click" href="#slideDiv">Historia</a>
-
-<div id="slideDiv">
-Aston Martin fue fundada en 1914 por el piloto Lionel Martin<figure><img src="astonimagenes/astonviejo.jpg"/></figure>, vencedor en 1913 de la famosa carrera de montaña Aston-Clinton. Tuvo una destacada participación en numerosas competiciones de gran turismo. Históricamente, sus rivales más importantes son las firmas italianas Ferrari y Maserati y, recientemente, la marca alemana Porsche. Aportando un diferenciado estilo inglés, Aston Martin adquirió fama mundial al proveer los automóviles para las películas de James Bond, el agente 007. En Casino Royale (2006) y en Quantum of Solace (2008) el actor Daniel Craig utiliza un DBS plateado.
-En 2005 la marca volvió a las competiciones deportivas con éxito logrando un tercer puesto en la categoría GT de las 24 Horas de Le Mans<figure><img src="astonimagenes/astonviejo2.jpg"/></figure> con su modelo DBR9. Aston Martin ganó por última vez esa legendaria prueba en 1959.
+<span class="span3" tabindex="0">Historia</span>
+<span class="span2" tabindex="0">Show Me</span>
+<p class="alert" >Aston Martin fue fundada en 1914 por el piloto Lionel Martin<img src="astonimagenes/astonviejo.jpg"/>, vencedor en 1913 de la famosa carrera de montaña Aston-Clinton. Tuvo una destacada participación en numerosas competiciones de gran turismo. Históricamente, sus rivales más importantes son las firmas italianas Ferrari y Maserati y, recientemente, la marca alemana Porsche. Aportando un diferenciado estilo inglés, Aston Martin adquirió fama mundial al proveer los automóviles para las películas de James Bond, el agente 007. En Casino Royale (2006) y en Quantum of Solace (2008) el actor Daniel Craig utiliza un DBS plateado.
+En 2005 la marca volvió a las competiciones deportivas con éxito logrando un tercer puesto en la categoría GT de las 24 Horas de Le Mans<img src="astonimagenes/astonviejo2.jpg"/> con su modelo DBR9. Aston Martin ganó por última vez esa legendaria prueba en 1959.
 
 
 1950 Aston Martin DB2 Vantage.
@@ -23,18 +21,14 @@ Durante casi toda su historia, Aston Martin ha fabricado automóviles de manera 
 Aston Martin produce tres gamas de modelos: DB9, con motor V12 de 6 litros; Vantage, con motor V8 de 4,7 litros y 420 CV; y desde 2007 el DBS V12, un modelo de edición limitada con diseño basado en el del DB9. Al igual que el Vanquish (producido desde 2001 a 2007) y el DB9, el Vantage tiene motor delantero y tracción posterior, el Vantage se presentó como un nuevo nivel de entrada a la marca inglesa. Está previsto que en 2009 Aston Martin empiece a fabricar el Aston Martin Rapide, un Gran turismo de 4 plazas.
 Actualmente, Aston Martin ha sacado a la venta un nuevo modelo que alcanza los 325 km/h (200 mph), este modelo ha sido llamado One-77, con un precio de un millón de euros aproximadamente.
 Aston Martin revivirá la marca Lagonda, y tiene previsto vender el primer modelo de dicha marca en 2012.1
-El futuro del Aston Martin peligra por problemas de financiación de la deuda.    
-    <a href="#">Close</a>
-</div>
-<a class="click" href="#slideDiv">Click this button</a>
+El futuro del Aston Martin peligra por problemas de financiación de la deuda. </p>
 
-<div id="slideDiv">
-    I'm a sliding div!
-    <a href="#">Close</a>
-</div>
-<a class="click" href="#slideDiv">Click this button</a>
 
-<div id="slideDiv">
-    I'm a sliding div!
-    <a href="#">Close</a>
-</div>
+<div class="menu">
+            <ul id="nav">
+                <li><div><a href="#">HISTORIA</a> <div class="hover"></div></div></li>
+                <li><div><a href="#">MODELOS</a><div class="hover"></div></div></li>
+                <li><div><a href="#">PRECIOS</a><div class="hover"></div></div></li>
+        </div>
+ 
+
