--- a/index.html
+++ b/index.html
@@ -5,7 +5,29 @@
       </title>
       <link rel="stylesheet" href="Stylesheet/main.css"/>
    </head>
+   
+   <style type="text/css">
+    html, body {
+        height: 100%;
+        width: 100%;
+        padding: 0;
+        margin: 0;
+    }
+ 
+    #full-screen-background-image {
+        z-index: -999;
+        width: 100%;
+        height: auto;
+        position: fixed;
+        top: 0;
+        left: 0;
+    }
+</style>
+   
    <body>
+   
+    <img alt="full screen background image" src="Lamborghinimagenes/fondo1.jpg" id="full-screen-background-image" />
+   
       <h1>CAR STYLES <img src="imagenes/icono.JPEG"</h1>
           <div id="slideshow-wrap">
         <input type="radio" id="button-1" name="controls" checked="checked"/>
