menu hover terminado

--- a/astonmartin.html
+++ b/astonmartin.html
@@ -14,15 +14,15 @@
        <img class="icon" src=""/>
        <p class="texto">Pagina</p>
    </div> 
-   <div class"contenedor"  id="dos">
+   <div class="contenedor"  id="dos">
        <img class="icon" src=""/>
        <p class="texto">Historia</p>
    </div>
-   <div class"contenedor"  id="tres">
+   <div class="contenedor"  id="tres">
        <img class="icon" src=""/>
        <p class="texto">Características</p>
    </div>
-   <div class"contenedor"  id="cuatro">
+   <div class="contenedor"  id="cuatro">
        <img class="icon" src=""/>
        <p class="texto">Precios</p>
    </div>
