--- a/astonmartin.html
+++ b/astonmartin.html
@@ -12,19 +12,25 @@
 <header>
    <div class="contenedor" id="uno">
        <img class="icon" src="iconos/home.png"/>
-       <p class="texto">Pagina</p>
+       <a class="texto">Pagina</p>
+       <a href="index.html"></a>
    </div> 
    <div class="contenedor"  id="dos">
        <img class="icon" src="iconos/book-lines.png"/>
-       <p class="texto">Historia</p>
+       <a class="texto" href="#a">Historia</p>
+       <div id="a" class="page"> this is a id</div>
    </div>
    <div class="contenedor"  id="tres">
        <img class="icon" src="iconos/bulb.png"/>
-       <p class="texto">Características</p>
+       <a class="texto" href="#b">Características</p>
+       <div id="b" class="page"> this is b id</div>
+
+
    </div>
    <div class="contenedor"  id="cuatro">
        <img class="icon" src="iconos/database.png"/>
-       <p class="texto">Precios</p>
+       <a class="texto" href="#c">Precios</p>
+       <div id="c" class="page"> this is c id</div>
    </div>
     
 </header>
