Texto con marco

--- a/astonmartin.html
+++ b/astonmartin.html
@@ -1,4 +1,3 @@
-
 <html>
    <head>
       <title>
@@ -12,25 +11,21 @@
 <header>
    <div class="contenedor" id="uno">
        <img class="icon" src="iconos/home.png"/>
-       <a class="texto">Pagina</p>
-       <a href="index.html"></a>
+       <p class="texto"><a href="index.html">Pagina</a></p>
    </div> 
    <div class="contenedor"  id="dos">
        <img class="icon" src="iconos/book-lines.png"/>
-       <a class="texto" href="#a">Historia</p>
-       <div id="a" class="page"> this is a id</div>
+       <p class="texto">Historia</p>
    </div>
    <div class="contenedor"  id="tres">
        <img class="icon" src="iconos/bulb.png"/>
-       <a class="texto" href="#b">Características</p>
-       <div id="b" class="page"> this is b id</div>
+       <p class="texto">Características</p>
 
 
    </div>
    <div class="contenedor"  id="cuatro">
        <img class="icon" src="iconos/database.png"/>
-       <a class="texto" href="#c">Precios</p>
-       <div id="c" class="page"> this is c id</div>
+       <p class="texto">Precios</p>
    </div>
     
 </header>
