He añadido estilos transiciones a tablas
imagenes ....

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <div id="slideshow-inner">
             <ul>
                 <li id="slide1">
-                    <img src="imagenes/aston_martin.jpg" />
+                    <a href="astonmartin.html"><img src="imagenes/aston_martin.jpg" /></a>
                     <div class="description">
                         <input type="checkbox" id="show-description-1"/>
                         <label for="show-description-1" class="show-description-label">I</label>
