--- a/preciosaston.html
+++ b/preciosaston.html
@@ -29,3 +29,22 @@
    </div>
     
 </header>
+
+<div class="marco">
+    <p>
+        <img class="oscurecer" src="astonimagenes/Rapideprec.jpg"/>
+    </p>
+</div>
+
+<div class="marco">
+    <p>
+        <img class="oscurecer" src="astonimagenes/Rapideprec.jpg"/>
+    </p>
+</div>
+
+<div class="marco">
+    <p>
+        <img class="oscurecer" src="astonimagenes/Rapideprec.jpg"/>
+    </p>
+</div>
+
