Lamborghini caracteristicas y historia finalizados y mismo estilo y links pagina principal

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                     </div>
                 </li>
                 <li id="slide2">
-                    <img src="imagenes/audi.jpg" />
+                    <a href="audi.html"><img src="imagenes/audi.jpg" /></a>
                     <div class="description">
                         <input type="checkbox" id="show-description-2"/>
                         <label for="show-description-2" class="show-description-label">I</label>
@@ -68,7 +68,7 @@
                     </div>
                 </li>
                 <li id="slide3">
-                    <img src="imagenes/chevrolet.jpg" />
+                    <a href="chevrolet.html"><img src="imagenes/chevrolet.jpg" /></a>
                     <div class="description">
                         <input type="checkbox" id="show-description-3"/>
                         <label for="show-description-3" class="show-description-label">I</label>
@@ -78,7 +78,7 @@
                     </div>
                 </li>
                 <li id="slide4">
-                    <img src="imagenes/ferrari.jpg" />
+                    <a href="Ferrari.html"><img src="imagenes/ferrari.jpg" /></a>
                     <div class="description">
                         <input type="checkbox" id="show-description-4"/>
                         <label for="show-description-4" class="show-description-label">I</label>
@@ -88,7 +88,7 @@
                     </div>
                 </li>
                 <li id="slide5">
-                    <img src="imagenes/lamborghini.jpg" />
+                    <a href="LamborghiniPrincipal.html"><img src="imagenes/lamborghini.jpg" /></a>
                     <div class="description">
                         <input type="checkbox" id="show-description-5"/>
                         <label for="show-description-5" class="show-description-label">I</label>
