He hecho una nueva tabla

--- a/Característicasaudi.html
+++ b/Característicasaudi.html
@@ -93,4 +93,50 @@
         <td>Emisiones de CO2</td>
         <td>305 g/km</td>
     </tr>
+    
+    </table>
+          </p>
+        </div>   
+   </div>
+
+<div class="marco">
+  <p>
+    <h3>Audi TT RS Coupé</h3>
+        <img src="http://srv2.betterparts.org/images/audi-tt-coup-13.jpg"/>El Audi TT RS es un coupé deportivo de alto rendimiento fabricado por Audi. Utiliza un motor turbocargado de 2,5 litros y cinco motorizaciones, que ofrece 335bhp entre 5.400 y 6.500 rpm.
+        Este coche ha aparecido en varios videojuegos de "Need for Speed" y "Forza", donde se reconoce este coche como uno de los mejored de clase A.
+        El TT-RS2 es la versión más potente del Audi TT, esta cuenta con un motor de 2,5 litros TFSI de 5 cilindros en línea y 340 hp, e incorpora la tracción total quattro. En EE.UU., debido a la distinta normativa anticontaminación, se vende de serie con una potencia de 360 hp.3 Acelera de 0 a 100 km/h en 4.6 segundos y su velocidad máxima está limitada a 250 km/h y opcionalmente a 280 km/h. Su consumo urbano es de 12.4 L/100 km, extraurbano: 6.4 L/100 km, y el consumo homologado mixto: 8.6 L/100 km. L/100 km, extraurbano: 6.4 L/100 km, y el consumo homologado mixto: 8.6 L/100 km. A finales de Agosto de 2013, su precio en España es de 67.000 euros.
+        <table class="ruben3">
+            <tr>
+                <td>Ficha Técnica</td>
+                <td>Audi TT RS coupé</td>
+            </tr>
+            <tr>
+                <td>Motor</td>
+                <td>5 en V</td>
+            </tr>
+            <tr>
+                <td>Cilindrada</td>
+                <td></td>
+            </tr>
+            <tr>
+                <td>Alimentación</td>
+                <td>iny directa</td>
+            </tr>
+            <tr>
+                <td>Distribución</td>
+                <td>5 válvulas por cilindro</td>
+            </tr>
+            <tr>
+                <td>Potencia máxima</td>
+                <td>340Cv a 5.400-6.500 rpm</td>
+            </tr>
+            <tr>
+                <td>Par máximo</td>
+                <td>450Nm a 1.600-5.300 rpm</td>
+            </tr>
+            <tr>
+                <td>Transmisión</td>
+                <td>quattro, Manual 6 velocidades</td>
+            </tr>
+        </table>
           
